# ChekhovAgent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  tree.txt
app/: config.py  main.py
app/bot/: __init__.py  bot.py  handlers.py
app/clients/: google_sheets.py  group_classes.py
app/services/: __init__.py  answer_service.py  answer_service_mock.py  intent_detector.py
app/tests/: test_answer_service.py  test_llm_service.py  test_sheets.py
